# docs/swagger.yaml
@@ -1,5 +1,29 @@
 basePath: /api/v1
 definitions:
+  models.ActiveBudgetPlanResponse:
+    properties:
+      budget_plan:
+        $ref: '#/definitions/models.BudgetPlan'
+      spending_by_bucket:
+        items:
+          $ref: '#/definitions/models.BucketSpending'
+        type: array
+      total_income:
+        type: number
+    type: object
+  models.BucketSpending:
+    properties:
+      allocation_percentage:
+        type: number
+      bucket_name:
+        type: string
+      max_allocation:
+        type: number
+      spending_percentage:
+        type: number
+      total_spending:
+        type: number
+    type: object
   models.BucketType:
     properties:
       created_at:
@@ -83,6 +107,8 @@ definitions:
         type: boolean
       name:
         type: string
+      set_as_active:
+        type: boolean
     required:
     - name
     type: object
@@ -133,12 +159,35 @@ definitions:
     - name
     - type
     type: object
+  models.DeleteBudgetBucketResponse:
+    properties:
+      bucket_type:
+        allOf:
+        - $ref: '#/definitions/models.BucketType'
+        description: RELATIONSHIPS
+      bucket_type_id:
+        type: integer
+      budget_plan_id:
+        type: integer
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      percentage:
+        type: number
+      updated_at:
+        type: string
+    type: object
   models.DeleteBudgetPlanResponse:
     properties:
       buckets:
         description: RELATIONSHIPS
         items:
-          $ref: '#/definitions/models.BudgetBucket'
+          $ref: '#/definitions/models.DeleteBudgetBucketResponse'
         type: array
       created_at:
         type: string
@@ -187,6 +236,8 @@ definitions:
     properties:
       amount:
         type: number
+      bucket_type:
+        $ref: '#/definitions/models.BucketType'
       category:
         allOf:
         - $ref: '#/definitions/models.Category'
@@ -269,6 +320,35 @@ definitions:
         type: string
       user:
         $ref: '#/definitions/models.UserResponse'
+    type: object
+  models.User:
+    properties:
+      active_budget_plan_id:
+        type: integer
+      budget_plans:
+        items:
+          $ref: '#/definitions/models.BudgetPlan'
+        type: array
+      categories:
+        description: RELATIONSHIPS
+        items:
+          $ref: '#/definitions/models.Category'
+        type: array
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        maxLength: 100
+        minLength: 2
+        type: string
+      updated_at:
+        type: string
+    required:
+    - email
+    - name
     type: object
   models.UserResponse:
     properties:
@@ -367,6 +447,17 @@ definitions:
       success:
         type: boolean
     type: object
+  utils.Response-models_ActiveBudgetPlanResponse:
+    properties:
+      data:
+        $ref: '#/definitions/models.ActiveBudgetPlanResponse'
+      error:
+        type: boolean
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
   utils.Response-models_BudgetPlan:
     properties:
       data:
@@ -448,6 +539,17 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/models.RegisterResponse'
+      error:
+        type: boolean
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
+  utils.Response-models_User:
+    properties:
+      data:
+        $ref: '#/definitions/models.User'
       error:
         type: boolean
       message:
@@ -827,6 +929,75 @@ paths:
       security:
       - BearerAuth: []
       summary: Update a budget plan
+      tags:
+      - budget-plans
+  /budget-plans/{id}/set-active:
+    post:
+      consumes:
+      - application/json
+      description: Set a budget plan as active for the authenticated user
+      parameters:
+      - description: Budget Plan ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response-models_User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+      security:
+      - BearerAuth: []
+      summary: Set an active budget plan
+      tags:
+      - budget-plans
+  /budget-plans/active:
+    get:
+      consumes:
+      - application/json
+      description: Get the active budget plan for the authenticated user, along with
+        total spending for each bucket type and their percentage of income
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response-models_ActiveBudgetPlanResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+      security:
+      - BearerAuth: []
+      summary: Get active budget plan
       tags:
       - budget-plans
   /budget-plans/templates:
