# models/category.go
@@ -12,7 +12,7 @@ type Category struct {
 	UserID       *uint          `json:"-" gorm:"index"`
 	Type         string         `json:"type" gorm:"not null" validate:"required,oneof=expense income"`
 	IsDefault    bool           `json:"is_default" gorm:"index"`
-	BucketTypeID uint           `gorm:"not null" json:"bucket_type_id"`
+	BucketTypeID *uint          `gorm:"index" json:"bucket_type_id,omitempty"`
 	CreatedAt    time.Time      `json:"created_at"`
 	UpdatedAt    time.Time      `json:"updated_at"`
 	DeletedAt    gorm.DeletedAt `json:"-" gorm:"index"`
@@ -29,7 +29,7 @@ type CategoryReponse struct {
 }
 
 type CategoryRequest struct {
-	BucketTypeID uint   `json:"bucket_type_id" validate:"required"`
+	BucketTypeID *uint  `json:"bucket_type_id,omitempty"`
 	Name         string `json:"name" gorm:"not null" validate:"required,min=2,max=100"`
 	Type         string `json:"type" gorm:"not null" validate:"required,oneof=expense income"`
 }
